Amend Licence to use Java records (#12)