@@ -18,44 +18,44 @@ public class LicenseMapper {
     public static License toLicenseDTO(LicenseJson json) {
         return Optional.ofNullable(json)
                 .map(licenseJson -> new License(
-                        licenseJson.getId(),
-                        licenseJson.getIdentityRef(),
-                        licenseJson.getSurname(),
-                        licenseJson.getFirstNames(),
-                        licenseJson.getDateOfBirth(),
-                        licenseJson.getCountry(),
-                        licenseJson.getDateOfIssue(),
-                        licenseJson.getExpiryDate(),
-                        licenseJson.getAgency(),
-                        licenseJson.getLicenseNumber(),
-                        licenseJson.getSignatureImage(),
-                        licenseJson.getAddress()))
-                .orElse(new License());
+                        licenseJson.id(),
+                        licenseJson.identityRef(),
+                        licenseJson.surname(),
+                        licenseJson.firstNames(),
+                        licenseJson.dateOfBirth(),
+                        licenseJson.country(),
+                        licenseJson.dateOfIssue(),
+                        licenseJson.expiryDate(),
+                        licenseJson.agency(),
+                        licenseJson.licenseNumber(),
+                        licenseJson.signatureImage(),
+                        licenseJson.address()))
+                .orElse(License.empty());
     }
 
     public static LicenseJson toLicenseJson(License license) {
         return Optional.ofNullable(license)
                 .map(licenseDto -> new LicenseJson(
-                        licenseDto.getId(),
-                        licenseDto.getIdentityRef(),
-                        licenseDto.getSurname(),
-                        licenseDto.getFirstNames(),
-                        licenseDto.getDateOfBirth(),
-                        licenseDto.getCountry(),
-                        licenseDto.getDateOfIssue(),
-                        licenseDto.getExpiryDate(),
-                        licenseDto.getAgency(),
-                        licenseDto.getLicenseNumber(),
-                        licenseDto.getSignatureImage(),
-                        licenseDto.getAddress()))
-                .orElse(new LicenseJson());
+                        licenseDto.id(),
+                        licenseDto.identityRef(),
+                        licenseDto.surname(),
+                        licenseDto.firstNames(),
+                        licenseDto.dateOfBirth(),
+                        licenseDto.country(),
+                        licenseDto.dateOfIssue(),
+                        licenseDto.expiryDate(),
+                        licenseDto.agency(),
+                        licenseDto.licenseNumber(),
+                        licenseDto.signatureImage(),
+                        licenseDto.address()))
+                .orElse(LicenseJson.empty());
     }
 
     public static List<LicenseJson> toLicenseJsonList(List<License> licenses) {
-        return Stream.of(licenses)
-                .filter(Objects::nonNull)
-                .flatMap(Collection::stream)
+        return Optional.ofNullable(licenses)
+                .orElseGet(List::of)
+                .stream()
                 .map(LicenseMapper::toLicenseJson)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
